# tv-app

./: .gitignore  CHANGELOG.md  README.md  README.txt  casaos-docker-compose.yml  docker-compose.casaos.vpn.yml  docker-compose.dev.smb.yml  docker-compose.dev.vpn.yml  docker-compose.dev.yml  docker-compose.old.yml  docker-compose.vpn.yml  docker-compose.yml
backend/: .dockerignore  .envrc  .python-version  Dockerfile  README.md  config.py  current_file.txt  enrich_epg_vod.py  main copy.py  main.py  parse_epg.py  parse_isramedia_epg.py  pyproject.toml  refresh_keshet_vod.py  refresh_vod_recent.py  run_scheduler.py
backend/cache/: epg.json  vod_recent.json
backend/data/: custom_channels.json
backend/debug/: constants.py  run.py  xbmc.py  xbmcaddon.py  xbmcgui.py  xbmcplugin.py  xbmcvfs.py
backend/epg_parsers/: README.md  c14.py  common.py  fishenzon.py  ftv.py  hidabroot.py  i24.py  isramedia.py  kabbalah.py  kan33.py  kan_worldcup.py  keshet_thematic.py  knesset.py  local_us.py  mako12.py  nine_tv.py  radio100fm.py  reshet13.py  tv10.py  walla33.py
backend/models/: schemas.py
backend/profile/: displayChannels.json  epg.json
backend/scripts/: README.md  README_kan_db_scanner.md  convert_local_series_to_hls.py  kan_db_scanner.py  parse_kan11.py  rename_tv_episodes.py  scan_kan_subclass_ids.py  vod_db_scanner.py
backend/services/: cache_service.py  channel_service.py  custom_channel_service.py  epg_service.py  epg_service_ext.py  epg_storage.py  epg_vod_enrichment.py  kan_vod_match_service.py  kan_vod_service.py  keshet_vod_service.py  local_series_service.py  (+9 more)
(+184 files in other folders)
