[project]
name = "tv-channels"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "requests",
    "python-dotenv",
    "email-validator",
    "python-multipart",
    "xmltodict",
    "questionary",
    "guessit>=3.8.0",
    "beautifulsoup4",
    "cloudscraper",
    "curl-cffi",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipython",
    "rich",
    "typer"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
#include = ["plugin_video_idanplus*"]
#exclude = ["debug*", "profile*"]
